--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 node_modules
+obj
+TWWM-Web.csproj
+TWWM-Web.csproj.user
+TWWM-Web.csproj.user
+Web.Debug.config
+Web.Release.config
+Web.config
+compilerconfig.json
+compilerconfig.json.defaults
+packages.config
+bin
+Properties
